Added start type message for the lobby